--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Safarer</string>
     <string name="email">Email</string>
     <string name="password">password</string>
+    <string name="login">Login</string>
 </resources>
