--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="email">Email</string>
     <string name="password">password</string>
     <string name="login">Login</string>
+    <string name="Enter_your_Email">Enter your Email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="confirm_password">Confirm Password!</string>
+    <string name="NID_Number">Enter your National Id</string>
 </resources>
