--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="enter_password">Enter Password</string>
     <string name="confirm_password">Confirm Password!</string>
     <string name="NID_Number">Enter your National Id</string>
+    <string name="todo">TODO</string>
 </resources>
